<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/blu1"
    tools:context=".CGRVideo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#02055a"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cr1"
                app:civ_border_width="1dp"
                android:layout_centerInParent="true"
                app:civ_border_color="#ff9933"
                android:layout_marginTop="-52dp"
                android:layout_marginLeft="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                tools:ignore="MissingClass" />


            <TextView
                android:id="@+id/tv1"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-332dp"
                android:layout_marginLeft="25dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="22dp"/>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CGR VIDEOS"
            android:textSize="45dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">


            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="100dp"
                android:layout_height="88dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/vid"
                android:textSize="50dp">

            </TextView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="250dp"
                android:layout_height="88dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="32dp"
                android:text="@string/linktosite59"
                android:gravity="center"
                android:textAlignment="center"
                android:textColorLink="#000000"
                android:textStyle="bold"
                android:background="#e1f6ff"
                android:textSize="30dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="88dp"
                android:background="@drawable/vid"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="50dp">

            </TextView>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="250dp"
                android:layout_height="88dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="2dp"
                android:textColorLink="#000000"
                android:textStyle="bold"
                android:background="#e1f6ff"
                android:text="@string/linktosite60"
                android:gravity="center"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="88dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/vid"
                android:textSize="50dp">

            </TextView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="88dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="2dp"
                android:textColorLink="#000000"
                android:textStyle="bold"
                android:background="#e1f6ff"
                android:text="@string/linktosite61"
                android:gravity="center"

                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="88dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/vid"
                android:textSize="50dp">

            </TextView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="250dp"
                android:layout_height="88dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="2dp"
                android:textColorLink="#000000"
                android:textStyle="bold"
                android:background="#e1f6ff"
                android:text="@string/linktosite62"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="88dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/vid"
                android:textSize="50dp">

            </TextView>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="250dp"
                android:layout_height="88dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="2dp"
                android:textColorLink="#000000"
                android:textStyle="bold"
                android:background="#e1f6ff"
                android:text="@string/linktosite63"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="30dp" />

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
</ScrollView>